fix: z-index touch up

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,10 @@ p {
     z-index: 2;
 }
 
+.navbar-toggler-icon {
+    margin-right: -25px;
+}
+
 .custom__verical-line {
     position: relative;
     padding-left: 50px;
